--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 TOKEN="NzgzOTU0MDE1NjUwMTg1MjI2.X8iQEg.Olxeibywek_rQ_V4BWyrgWdCGgs"
+
+DBHOST="THEPAVOPI"
+DBUSER="pavo"
+DBUSERPASS="Dem#fuT01T4wjiSb2TZd79DEO#6Gn#iZdF2vEZxiZsV$0uYuRJLBFQCzhB8Q*4JCxDNHSBNftKkBzoBfTfY@lM7qROx^7S&6w9R"
+DBNAME="A71 DiscordBot"
