Il bot è in uno stato funzionante

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-TOKEN="NzgzOTU0MDE1NjUwMTg1MjI2.X8iQEg.Olxeibywek_rQ_V4BWyrgWdCGgs"
+TOKEN = "NzgzOTU0MDE1NjUwMTg1MjI2.X8iQEg.Olxeibywek_rQ_V4BWyrgWdCGgs"
 
-DBHOST="THEPAVOPI"
-DBUSER="pavo"
-DBUSERPASS="Dem#fuT01T4wjiSb2TZd79DEO#6Gn#iZdF2vEZxiZsV$0uYuRJLBFQCzhB8Q*4JCxDNHSBNftKkBzoBfTfY@lM7qROx^7S&6w9R"
-DBNAME="A71 DiscordBot"
+DBHOST      = "THEPAVOPI"
+DBUSER      = "pavo"
+DBUSERPASS  = "Dem#fuT01T4wjiSb2TZd79DEO#6Gn#iZdF2vEZxiZsV$0uYuRJLBFQCzhB8Q*4JCxDNHSBNftKkBzoBfTfY@lM7qROx^7S&6w9R"
+DBNAME      = "A71 DiscordBot"
+
+SERVERADMINROLE     = 530449289403564042
+SERVERFOUNDERROLE   = 530419634784960540
