--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-TOKEN = "NzgzOTU0MDE1NjUwMTg1MjI2.X8iQEg.Olxeibywek_rQ_V4BWyrgWdCGgs"
+TOKEN = "NzU0Mzc5NjkzODU5NDA1ODM1.X1z41g.woQlIHSjSju-nwdj-uaHeDCyiuc"
 
 DBHOST      = "THEPAVOPI"
 DBUSER      = "pavo"
